tests/fail/elaboration/unsolved/placeholder-ann.snap
stdout = ''
stderr = '''
error: failed to infer placeholder expression
  ┌─ tests/fail/elaboration/unsolved/placeholder-ann.fathom:3:1
  │
3 │ _ : Type
  │ ^ unsolved placeholder expression

'''
